SERVER-26928 Check for shutdown in pauseRsBgSyncProducer failpoint